--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Spoon-Knife</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <style>
+  	body{ background:#CCC;}
+  </style>
 </head>
 
 <body>
@@ -15,6 +18,8 @@
 <p>
   Fork me? Fork you, @octocat!
 </p>
+<div class="pete">
+</div>
 
 </body>
 </html>
