--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Spoon-Knife</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
   <style>
-  	body{ background:#CCC;}
+  	body{ background:#CCC; alignment-adjust:after-edge;}
   </style>
 </head>
 
