--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <LINK href="styles.css" rel="stylesheet" type="text/css">
   <style>
   	body{ background:#CCC; alignment-adjust:after-edge;}
+	p{ color:#F00}
   </style>
 </head>
 
