Revert d5cde80..3cf7d89
This rolls back to commit d5cde80c0df23cd0e239c5a12fee4efa83f08b82.

--- a/index.html
+++ b/index.html
@@ -5,61 +5,22 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Spoon-Knife</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
-	  
+  <style>
+  	body{ background:#CCC; alignment-adjust:after-edge;}
+	p{ color:#F00}
+  </style>
 </head>
 
 <body>
-<ul>
-  <li>
-    <a class='list-item' href=''>
-      <i class='icon-reorder'></i>
-    </a>
-  </li>
-  <li>
-    <a class='list-item' href=''>
-      <i class='icon-th-large'></i>
-    </a>
-  </li>
-  <li>
-    <a class='list-item' href=''>
-      <i class='icon-bar-chart'></i>
-    </a>
-  </li>
-  <li>
-    <a class='list-item' href=''>
-      <i class='icon-tasks'></i>
-    </a>
-  </li>
-  <li>
-    <a class='list-item' href=''>
-      <i class='icon-bell'></i>
-    </a>
-  </li>
-  <li>
-    <a class='list-item' href=''>
-      <i class='icon-archive'></i>
-    </a>
-  </li>
-  <li>
-    <a class='list-item' href=''>
-      <i class='icon-comment'></i>
-    </a>
-  </li>
-  <li>
-    <a class='list-item' href=''>
-      <i class='icon-sitemap'></i>
-    </a>
-  </li>
-  <li>
-    <a class='list-item' href=''>
-      <i class='icon-thumbs-up'></i>
-    </a>
-  </li>
-  <li>
-    <a class='list-item' href=''>
-      <i class='icon-tumblr'></i>
-    </a>
-  </li>
-</ul>
+
+<img src="forkit.gif" id="octocat" alt="" />
+
+<!-- Feel free to change this text here -->
+<p>
+  Fork me? Fork you, @octocat!
+</p>
+<div class="pete">
+</div>
+
 </body>
 </html>
